--- a/resume.html
+++ b/resume.html
@@ -619,7 +619,7 @@
 											<div class="timeline-content">
 												<div class="timeline-heading">
 													<h4><font color="#FFBF00">Certificates</font></h4>
-													<br><h6>Compliance Solutions | 40-Hour OSHA HAZWOPER Training<br>PADI | Advanced Open Water SCUBA Diver <br> PADI | Equipment Specialist <br> PADI | Peak Performance Buoyancy <br> PADI | Open Water SCUBA Diver</h6>
+													<br><h6>Compliance Solutions | 40-Hour OSHA HAZWOPER Training<br>PADI | Advanced Open Water SCUBA Diver <br> PADI | Equipment Specialist <br> PADI | Peak Performance Buoyancy <br> PADI | Open Water SCUBA Diver <br> <a href="https://www.linkedin.com/learning/powerpoint-silicon-valley-presentation-secrets" target="_blank">LinkedIn Learning | PowerPoint: Silicon Valley Presentation Secrets</a> </h6>
 												</div>
 											</div>
 										</div>
@@ -632,7 +632,9 @@
                                         <div class="timeline-heading">
                                             <h4><font color="#FFBF00">Certificates</font></h4>
 											<br><h6>Esri | ArcGIS Desktop Associate 10.3</h6>
-                                            <h6>Esri | Earth Imagery at Work <br>Esri | Basics of Python (for ArcGIS 10)<br> Esri | Python Scripting for Geoprocessing Workflows <br> Esri | Python Scripting for Map Automation
+																						<h6> <a href="https://www.esri.com/training/catalog/57aba196cbc441087e0d2395/earth-imagery-at-work/" target = "_blank">Esri | Earth Imagery at Work</a> <br>Esri | Basics of Python (for ArcGIS 10)<br> <a href="https://www.esri.com/training/catalog/5763042c851d31e02a43ed84/python-scripting-for-geoprocessing-workflows/" target="_blank">Esri | Python Scripting for Geoprocessing Workflows</a> <br> Esri | Python Scripting for Map Automation 
+																							<br> <a href="https://www.lynda.com/Design-Infographics-tutorials/Data-Visualization-Fundamentals/153776-2.html" target="_blank">Lynda.com | Data Visualization</a> <br> <a href="https://www.lynda.com/Page-Layout-tutorials/Design-101-Presentations/440957-2.html" target="_blank">Lynda.com | Graphic Design </a> <br> <a href="https://www.lynda.com/course-tutorials/Design-Thinking-Customer-Experience/588034-2.html" target="_blank">Lynda.com | Design Thinking: Customer Experience </a>
+																							<br> <a href="https://www.lynda.com/SketchUp-tutorials/SketchUp-2017-Essential-Training/494108-2.html" target="_blank">Lynda.com | SketchUp 2017 Essential Training</a> <br> <a href="https://www.lynda.com/Access-tutorials/Access-2016-Advanced-Tips-Tricks/455725-2.html" target="_blank">Lynda.com | Access 2016 Essential Training </a> <br><a href="https://www.lynda.com/Access-tutorials/Access-2013-Essential-Training/115857-2.html" target="_blank">Lynda.com | Access 2013 Essential Training </a> 
 											</h6>
 											<br><br><h4><font color="#186464">The Donald M. Matthews Award, Excellence in Forestry</font></h4>
                                             <br><h6>School of Natural Resources and Environment, University of Michigan</h6>
